<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/alabaster"
    android:padding="20dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/string_app_icon_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_tip_image" />

    <TextView
        android:id="@+id/text_view_total_to_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_total_amount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_view_total_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/text_view_total_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_tip_amount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_bill_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_total_to_pay" />

    <EditText
        android:id="@+id/edit_text_bill_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_bill_amount_hint"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/charleston_green"
        android:textColorHint="@color/charleston_green"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edit_text_tip_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_total_tip"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_text_tip_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/string_tip_amount_hint"
        android:inputType="numberSigned"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textColor="@color/charleston_green"
        android:textColorHint="@color/charleston_green"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button_calculate_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_bill_amount"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_calculate_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/antique_ruby"
        android:text="@string/calculate_tip_button_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_tip_rate" />
</androidx.constraintlayout.widget.ConstraintLayout>